examples/kubernetes/quickstarts/demo-app/overlays/traefik-ingress-route/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-app
  namespace: quickstarts
  labels:
    app.kubernetes.io/name: echo-app
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: Host(`echo-app.local`) && PathPrefix(`/`)
      priority: 10
      middlewares:
        - name: heimdall
          namespace: quickstarts
      services:
        - name: demo-app
          port: 8080
